--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">homework</string>
+    <string name="enter_anagram">Enter Anagram</string>
+    <string name="save">Save</string>
+    <string name="output">Output</string>
+    <string name="clear">Clear</string>
+    <string name="angaram_count_0"><![CDATA[Angaram Count -> 0]]></string>
 </resources>
