--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">homework</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="log_in">Log In</string>
+    <string name="register">Register</string>
+    <string name="at_pawel_czerwinski">\@Pawel_Czerwinski</string>
+    <string name="pawel_czerwinski">Pawel Czerwinski</string>
+    <string name="next">Next</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
 </resources>
