--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="next">Next</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="username">Username</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
