--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="email">Email</string>
     <string name="username">Username</string>
     <string name="sign_up">Sign Up</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="log_out">Log Out</string>
+    <string name="hello_text">Hello, %1$s!</string>
 </resources>
