--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">homework</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_not_found">User not found</string>
+    <string name="enter_id_here">Enter ID here</string>
+    <string name="enter_first_name_here">Enter first name here</string>
+    <string name="enter_last_name_here">Enter last name here</string>
+    <string name="enter_birthday_here">Enter birthday here</string>
+    <string name="enter_address_here">Enter address here</string>
+    <string name="enter_email_here">Enter email here</string>
+    <string name="enter_description_here_optional">Enter description here (Optional)</string>
+    <string name="add_user">Add user</string>
+    <string name="back">Back</string>
+    <string name="find_user">Find User</string>
+    <string name="add_new_user">Add new User</string>
 </resources>
