--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">homework</string>
+
+    <!--Item-->
+    <string name="price">$%1$d</string>
 </resources>
