--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">homework</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tracking_number">Tracking number:</string>
+    <string name="quantity">Quantity:</string>
+    <string name="delivered">Delivered</string>
+    <string name="details">Details</string>
+    <string name="subtotal">Subtotal:</string>
 </resources>
