--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">homework</string>
+    <string name="start_game">Start Game</string>
+    <string name="_4x4">4x4</string>
+    <string name="_5x5">5x5</string>
+    <string name="_3x3">3x3</string>
 </resources>
