--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">homework</string>
+    <string name="please_fill_out_all_fields">Please fill out all fields!</string>
 </resources>
