--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="please_fill_out_all_fields">Please fill out all fields!</string>
     <string name="loading">Loading…</string>
     <string name="log_out">Log Out</string>
+    <string name="profile">Profile</string>
 </resources>
