--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,15 @@
 <resources>
     <string name="app_name">homework</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Generic fallback error message -->
+    <string name="error_generic">An error occurred. Please try again later.</string>
+
+    <!-- Network errors -->
+    <string name="error_no_connection">No internet connection. Please check your network settings.</string>
+    <string name="error_timeout">The request timed out. Please try again.</string>
+    <string name="error_unauthorized">You are not authorized. Please log in again.</string>
+    <string name="error_forbidden">Access forbidden. You do not have permission to perform this action.</string>
+    <string name="error_not_found">The requested resource was not found.</string>
+
+    <string name="balance">Balance: %1$.2f %2$s</string>
 </resources>
