--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,21 @@
     <string name="error_forbidden">Access forbidden. You do not have permission to perform this action.</string>
     <string name="error_not_found">The requested resource was not found.</string>
 
+    <!-- Account Number Error Messages -->
+    <string name="error_account_number_invalid_format">Invalid account number format.</string>
+    <string name="error_account_number_invalid_size">Account number size must be 23.</string>
+    <string name="error_account_number_not_found">Account number not found.</string>
+
+    <!-- Personal Number Error Messages -->
+    <string name="error_personal_number_invalid_format">Invalid personal number format.</string>
+    <string name="error_personal_number_invalid_size">Personal number size must be 11.</string>
+    <string name="error_personal_number_not_found">Personal number not found.</string>
+
+    <!-- Mobile Number Error Messages -->
+    <string name="error_mobile_number_invalid_format">Invalid mobile number format.</string>
+    <string name="error_mobile_number_invalid_size">Mobile number size must be 9.</string>
+    <string name="error_mobile_number_not_found">Mobile number not found.</string>
+
     <string name="balance">Balance: %1$.2f %2$s</string>
     <string name="from">From</string>
     <string name="navigate_back">Navigate back</string>
@@ -20,4 +35,9 @@
     <string name="sell">Sell</string>
     <string name="pitiful_android_developer">Pitiful Android Developer</string>
     <string name="description">Description</string>
+    <string name="buy">Buy</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="find_account_to_pay">Find account to pay</string>
+    <string name="find">Find</string>
 </resources>
