--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,16 @@
     <!-- Generic fallback error message -->
     <string name="error_generic">An error occurred. Please try again later.</string>
 
-    <!-- Network errors -->
+    <!-- Network Error Messages -->
     <string name="error_no_connection">No internet connection. Please check your network settings.</string>
     <string name="error_timeout">The request timed out. Please try again.</string>
     <string name="error_unauthorized">You are not authorized. Please log in again.</string>
     <string name="error_forbidden">Access forbidden. You do not have permission to perform this action.</string>
     <string name="error_not_found">The requested resource was not found.</string>
+
+    <!-- Business Error Messages -->
+    <string name="error_account_not_found">Account not found</string>
+    <string name="error_account_not_enough_balance">Your balance is not enough</string>
 
     <!-- Account Number Error Messages -->
     <string name="error_account_number_invalid_format">Invalid account number format.</string>
@@ -36,8 +40,8 @@
     <string name="pitiful_android_developer">Pitiful Android Developer</string>
     <string name="description">Description</string>
     <string name="buy">Buy</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="find_account_to_pay">Find account to pay</string>
     <string name="find">Find</string>
+    <string name="choose_an_account">Choose an account</string>
+    <string name="amount">Amount</string>
 </resources>
