--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="email">Email</string>
+    <string name="welcome">Welcome</string>
 </resources>
