--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="register">Register</string>
     <string name="email">Email</string>
     <string name="welcome">Welcome</string>
+    <string name="remember_me">Remember me</string>
 </resources>
