--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="email">Email</string>
     <string name="welcome">Welcome</string>
     <string name="remember_me">Remember me</string>
+    <string name="profile">Profile</string>
+    <string name="home">Home</string>
+    <string name="log_out">Log out</string>
 </resources>
