--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="profile">Profile</string>
     <string name="home">Home</string>
     <string name="log_out">Log out</string>
+    <string name="you_aren_t_connected_to_the_internet">⚠️ You aren’t connected to the internet</string>
 </resources>
